Require.js was added, module loading was implemented

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-    "name": "custom-mvc",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Robert Wesołowski",
-    "license": "ISC",
-    "dependencies": {}
+  "name": "custom-mvc",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Robert Wesołowski",
+  "license": "ISC",
+  "dependencies": {
+    "requirejs": "^2.2.0"
+  }
 }
